--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 {{ title }}
-
+<nav>
+  <a routerLink="/">Blank Page</a>
+  <br>
+  <a routerLink="/fizzbuzz">Generate first 36 FizzBuzz numbers</a>
+</nav>
 <router-outlet></router-outlet>
