--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,8 @@
 <nav>
   <a routerLink="/">Blank Page</a>
   <br>
+  <a routerLink="/login">Login</a>
+  <br>
   <a routerLink="/fizzbuzz">Generate first 36 FizzBuzz numbers</a>
 </nav>
 <router-outlet></router-outlet>
